Add keydown functionality

--- a/index.html
+++ b/index.html
@@ -12,11 +12,46 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
     </head>
-    <body>
+    <body> 
+        <div id="main">
+            <h1>Calculator</h1>
+            <div class="displaywrap">
+                <div class="old">
+
+                </div>
+                <div class="operator">
+                </div>
+                <div class="display">
+                </div>
+            </div>
+            <div class="functions">
+                <button class="ac">AC</button>
+                <button class="op" id="plu">+</button>
+                <button class="op" id="sub">-</button>
+                <button class="op" id="mul">*</button>
+                <button class="op" id="div">/</button>
+                <button class="eq" id="equ">=</button>
+            </div>
+            <div class="numbers">
+                    <button class="num-normal" id="one">1</button>
+                    <button class="num-normal" id="two">2</button>
+                    <button class="num-normal" id="three">3</button>
+                    <button class="num-normal" id="four">4</button>
+                    <button class="num-normal" id="five">5</button>
+                    <button class="num-normal" id="six">6</button>
+                    <button class="num-normal" id="seven">7</button>
+                    <button class="num-normal" id="eight">8</button>
+                    <button class="num-normal" id="nine">9</button>
+                    <button class="zero" id="zerob">0</button>
+                    <button class="point" id="pointb">.</button>
+            </div>
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+   <footer>
+    Created July 2022 by Christian Schuster
+   </footer>
         <script src="./script.js" async defer></script>
     </body>
 </html>
