Add Backspace functionality

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
             <div class="functions">
                 <button class="ac">AC</button>
+                <button class="c">C</button>
                 <button class="op" id="plu">+</button>
                 <button class="op" id="sub">-</button>
                 <button class="op" id="mul">*</button>
